# noxus-plugins

./: README.md
linear/: README.md  manifest.json  pyproject.toml
linear/linear/: __init__.py  client.py  config.py  integration.py
linear/linear/nodes/: __init__.py  issue_reader.py  teste.ipynb
linear/tests/: __init__.py
notion/: manifest.json
notion/notion/nodes/: issue_reader.py
notion/tests/: test_linear.py
