[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linear"
version = "0.1.0"
description = "Linear integration plugin for Noxus"
authors = [
    { name = "Noxus Team" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
